--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="gender_female">Female</string>
     <!--text for the pet saved  toast message -->
     <string name="pet_saved">Pet Saved</string>
+    <!--text for the pet saved  toast message -->
+    <string name="pet_updated">Pet updated</string>
     <!--text for the error with saving the pet toast message -->
     <string name="error_with_saving">Error with Saving the pet</string>
     <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
